--- a/index.html
+++ b/index.html
@@ -293,9 +293,8 @@
     </div>
   </footer>
   <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+    <p class="attribution" style="background-color: #D83F87; color: #fff;">
+      Coded by <a href="#" style="color: #fff;">Mohd Yasir Hussain</a>.
     </p>
   </footer>
   
