--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution a { color: #fff; }
   </style>
   
 </head>
@@ -292,9 +292,10 @@
     </div>
     </div>
   </footer>
-  <footer>
-    <p class="attribution" style="background-color: #D83F87; color: #fff;">
-      Coded by <a href="#" style="color: #fff;">Mohd Yasir Hussain</a>.
+  <footer style="background-color:  hsl(231, 69%, 60%); height: auto; overflow-y: hidden;">
+    <p class="attribution" style="color: #fff;margin-top: 6px;">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Mohd Yasir Hussain</a>.
     </p>
   </footer>
   
